--- a/cats/tsconfig.json
+++ b/cats/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "lib": ["es2015", "es2021", "DOM"],
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
